# chemixhub

./: .gitignore  LICENSE  README.md  setup.cfg
config/: config_template.yaml  example.yaml
datasets/MON/processed_data/: compounds.csv  croissant.json  data_processing.py  processed_MON.csv
datasets/MON/raw_data/: published_MONdata.csv
datasets/drug-solubility/processed_data/: compounds.csv  croissant.json  data_processing.py  processed_DrugSolubilityData.csv
datasets/ionic-liquids/processed_data/: compounds.csv  croissant.json  data_processing.py
datasets/ionic-liquids/raw_data/: fetch_ilthermo.py
datasets/logV/processed_data/: compounds.csv  croissant.json  data_processing.py  processed_logV.csv
datasets/logV/raw_data/: published_logV.csv
datasets/miscible-solvent/processed_data/: compounds.csv  croissant.json  data_processing.py
datasets/nist-logV/processed_data/: compounds.csv  croissant.json  data_processing.py
datasets/olfactory-similarity/processed_data/: compounds.csv  croissant.json  npz_to_safetensors.py  preprocess_data.py  processed_OlfactorySimilarity.csv
datasets/polymer-electrolyte/processed_data/: compounds.csv  croissant.json  preprocess_polyelec.py  processed_PolymerElectrolyteData.csv
scripts/: run_cmp.py  run_cv.py  run_group_features.py  run_lmo.py  run_model.py  run_rot_bond.py  run_temp.py  run_transfer_learning.py  run_zero_shot.py
src/: README.md
src/mixhub/: __init__.py
src/mixhub/data/: __init__.py  collate.py  data.py  dataset.py  featurization.py  splits.py  utils.py
src/mixhub/model/: __init__.py  aggregation.py  (+9 more)
(+99 files in other folders)
