[metadata]
name = chemixhub
description = Mixture datasets and benchmark
author= Ella Rajaonson
python_requires = >= 3.11.*

[options]
packages = find_namespace:
install_requires =
    ilthermopy>=1.1.1.1
    numpy>=1.26.4
    pandas>=2.2.2
    torch>=2.3.1
    molfeat>=0.10.1
    torch-geometric>=2.6.1
    descriptastorus>=2.7.0.3
    rdit>=2024.9.6
    jaxtyping>=0.2.33
    tqdm>=4.66.4
    torchmetrics>=1.7.1
    omegaconf>=2.3.0
    safetensors>=0.5.3
    wandb>=0.19.10
    xgboost>=3.0.0
setup_requires =
    setuptools
package_dir =
    = src

[options.packages.find]
where = src